--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "NodeJS implementation of Timelord",
   "scripts": {
 	"test": "echo \"Error: no test specified\" && exit 1",
-	"start": "grunt"
+	"start": "grunt build && node index.js"
   },
   "repository": {
 	"type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/UniversityRadioYork/node-timelord#readme",
   "dependencies": {
+	"express": "^4.13.3",
 	"grunt": "^0.4.5",
 	"grunt-contrib-connect": "^0.11.2",
 	"grunt-contrib-uglify": "^0.9.2",
