Changes silence detection to use config file

--- a/public/scripts/config.json
+++ b/public/scripts/config.json
@@ -16,6 +16,10 @@
 	  2
 	]
   },
+  "silence_timeouts": {
+	"short": 5,
+	"long": 20
+  },
   "request_timeout": 3000,
   "short_name": "URY",
   "long_name": "University Radio York"
