Changes how the whole app is compiled
- Renames source folder from /public/ to /src/
- Adds Grunt tasks for building for development and for production
- Adds Grunt tasks for running `npm install` and `bower install`
- Moves config.json into root of project and Grunt copies it into /bin/
- Removes apache config example

--- a/.npmignore
+++ b/.npmignore
@@ -101,9 +101,5 @@ bower_components
 ### Now some custom things ###
 
 # The grunt task generates these when serving
-/public/scripts/*.min.js
-/public/scripts/*.min.js.map
 
-# Same with these
-/public/stylesheets/*.css
-/public/stylesheets/*.css.map
+/bin
