--- a/.gitignore
+++ b/.gitignore
@@ -119,9 +119,5 @@ bower_components
 ### Now some custom things ###
 
 # The grunt task generates these when serving
-/public/scripts/*.min.js
-/public/scripts/*.min.js.map
 
-# Same with these
-/public/stylesheets/*.css
-/public/stylesheets/*.css.map
+/bin
