--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "description": "NodeJS implementation of Timelord",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1",
-	"start": "grunt build && node index.js"
+	"test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
 	"type": "git",
@@ -23,7 +22,10 @@
   "dependencies": {
 	"express": "^4.13.3",
 	"grunt": "^0.4.5",
+	"grunt-auto-install": "^0.3.0",
+	"grunt-contrib-clean": "^0.6.0",
 	"grunt-contrib-connect": "^0.11.2",
+	"grunt-contrib-copy": "^0.8.2",
 	"grunt-contrib-uglify": "^0.9.2",
 	"grunt-contrib-watch": "^0.6.1",
 	"grunt-sass": "^1.0.0",
