Adds option in config for not refreshing on error

--- a/config.json
+++ b/config.json
@@ -22,5 +22,6 @@
   },
   "request_timeout": 3000,
   "short_name": "URY",
-  "long_name": "University Radio York"
+  "long_name": "University Radio York",
+  "refresh_on_error": false
 }
