--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 	"grunt-sass": "^1.0.0",
 	"grunt-wiredep": "^2.0.0",
 	"serve-static": "^1.10.0"
+  },
+  "devDependencies": {
+	"flightplan": "^0.6.13"
   }
 }
