Add coffeescript versions of js files

--- a/package.json
+++ b/package.json
@@ -4,34 +4,35 @@
   "private": true,
   "description": "NodeJS implementation of Timelord",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-	"type": "git",
-	"url": "git+ssh://git@github.com/UniversityRadioYork/node-timelord.git"
+    "type": "git",
+    "url": "git+ssh://git@github.com/UniversityRadioYork/node-timelord.git"
   },
   "keywords": [
-	"timelord"
+    "timelord"
   ],
   "author": "Chris Taylor <christhebaron@gmail.com>",
   "license": "ISC",
   "bugs": {
-	"url": "https://github.com/UniversityRadioYork/node-timelord/issues"
+    "url": "https://github.com/UniversityRadioYork/node-timelord/issues"
   },
   "homepage": "https://github.com/UniversityRadioYork/node-timelord#readme",
   "dependencies": {
-	"grunt": "^1.0.1",
-	"grunt-auto-install": "^0.3.0",
-	"grunt-contrib-clean": "^1.0.0",
-	"grunt-contrib-connect": "^1.0.2",
-	"grunt-contrib-copy": "^1.0.0",
-	"grunt-contrib-uglify": "^1.0.1",
-	"grunt-contrib-watch": "^1.0.0",
-	"grunt-sass": "^1.0.0",
-	"grunt-wiredep": "^3.0.1",
-	"serve-static": "^1.10.0"
+    "grunt": "^1.0.1",
+    "grunt-auto-install": "^0.3.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-coffee": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^1.0.0",
+    "grunt-wiredep": "^3.0.1",
+    "serve-static": "^1.10.0"
   },
   "devDependencies": {
-	"flightplan": "^0.6.13"
+    "flightplan": "^0.6.13"
   }
 }
