--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,9 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.5",
     "jquery": "^2.1.4",
     "moment": "^2.10.6",
-    "jquery-ui": "^1.11.4"
+    "jquery-ui": "^1.11.4",
+    "bootstrap-sass": "^3.3.6"
   }
 }
