Pass moment into Timelord, add some comments and remove max_counters option

--- a/config.json.example
+++ b/config.json.example
@@ -27,8 +27,8 @@
   "refresh_on_error": false,
   "counters": [
 	{
-	  "label" : "",
-	  "up/!down": true,
+	  "label" : "Time Passed",
+	  "type": "up",
 	  "datetime": "2016/06/19 16:45"
 	}
   ]
