Add ability for Timelord to display Off Air status.
Also made the blue selector text colour for studio2 brighter, because
it’s not easily readable in the studio.

--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
 	"isObitHappening": "selector/isobithappening/",
 	"statusAtTime": "selector/statusattime/",
 	"currentAndNext": "timeslot/currentandnext/",
-	"breakingNews": "news/latestnewsitem/3"
+	"breakingNews": "news/latestnewsitem/3",
+	"isActiveTerm": "scheduler/isactiveterm/"
   },
   "next_show_filtering": {
 	"n": 2,
