--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
  },
  "homepage": "https://github.com/UniversityRadioYork/node-timelord#readme",
  "dependencies": {
+  "node-sass" : "4.6.1",
   "grunt": "^1.0.1",
   "grunt-auto-install": "^0.3.0",
   "grunt-contrib-clean": "^1.0.0",
