--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "grunt-contrib-copy": "^1.0.0",
   "grunt-contrib-uglify": "^2.0.0",
   "grunt-contrib-watch": "^1.0.0",
-  "grunt-sass": "^1.1.0",
-  "grunt-wiredep": "^3.0.1",
+  "grunt-sass": "^2.0.0",
+  //"grunt-wiredep": "^3.0.1",
   "serve-static": "^1.10.0",
   "bootstrap": "^3.3.5",
   "jquery": "^2.1.4",
