--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
   "grunt-sass": "^2.0.0",
   "serve-static": "^1.10.0",
   "bootstrap": "^3.3.5",
-  "jquery": "^2.1.4",
-  "moment": "^2.10.6",
-  "jquery-ui": "^1.11.4"
+  "jquery": "^3.3.1",
+  "moment": "^2.20.1"
  },
  "devDependencies": {
   "flightplan": "^0.6.13"
