--- a/package.json
+++ b/package.json
@@ -20,18 +20,20 @@
  },
  "homepage": "https://github.com/UniversityRadioYork/node-timelord#readme",
  "dependencies": {
-  "grunt": "^1.0.1",
-  "grunt-auto-install": "^0.3.0",
-  "grunt-contrib-clean": "^1.0.0",
-  "grunt-contrib-connect": "^1.0.2",
-  "grunt-contrib-copy": "^1.0.0",
-  "grunt-contrib-uglify": "^2.0.0",
-  "grunt-contrib-watch": "^1.0.0",
-  "grunt-sass": "^2.0.0",
-  "serve-static": "^1.10.0",
   "bootstrap": "^3.3.5",
+  "grunt": "^1.0.3",
+  "grunt-cli": "^1.3.0",
+  "grunt-auto-install": "^0.3.1",
+  "grunt-contrib-clean": "^2.0.0",
+  "grunt-contrib-connect": "^2.0.0",
+  "grunt-contrib-copy": "^1.0.0",
+  "grunt-contrib-uglify": "^4.0.0",
+  "grunt-contrib-watch": "^1.1.0",
+  "grunt-sass": "^3.0.2",
   "jquery": "^3.3.1",
-  "moment": "^2.20.1"
+  "moment": "^2.24.0",
+  "serve-static": "^1.13.2",
+  "node-sass": "^4.11.0"
  },
  "devDependencies": {
   "flightplan": "^0.6.13"
