--- a/config.json
+++ b/config.json
@@ -21,7 +21,7 @@
 	"short": 5,
 	"long": 20
   },
-  "icecast_json_url": "http://audio.ury.org.uk/status-json.xsl",
+  "icecast_json_url": "https://audio.ury.org.uk/status-json.xsl",
   "request_timeout_high_pri": 3000,
   "request_timeout_low_pri": 10000,
   "short_name": "URY",
