--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
  "homepage": "https://github.com/UniversityRadioYork/node-timelord#readme",
  "dependencies": {
   "bootstrap": "^3.3.5",
-  "grunt": "^1.0.3",
-  "grunt-cli": "^1.3.0",
+  "fibers": "3.1.1",
+  "findup-sync": "^5.0.0",
+  "flightplan": "^0.6.13",
+  "grunt": "^1.6.1",
   "grunt-auto-install": "^0.3.1",
+  "grunt-cli": "^1.4.3",
   "grunt-contrib-clean": "^2.0.0",
   "grunt-contrib-connect": "^2.0.0",
   "grunt-contrib-copy": "^1.0.0",
@@ -31,9 +34,11 @@
   "grunt-contrib-watch": "^1.1.0",
   "grunt-sass": "^3.0.2",
   "jquery": "^3.3.1",
+  "liftoff": "^3.1.0",
   "moment": "^2.24.0",
-  "serve-static": "^1.13.2",
-  "node-sass": "^4.11.0"
+  "npm": "^10.4.0",
+  "sass": "^1.49.9",
+  "serve-static": "^1.13.2"
  },
  "devDependencies": {
   "flightplan": "^0.6.13"
